# dot

./: .gitignore  .gitmodules  CMakeLists.txt  go.mod  run.sh
app/rl/: button.go  gui.c  gui.go  gui.h  main.c  main.go  render.c  render.go  render.h  rlassets.c  rlassets.go  rlassets.h
client/: assets.c  assets.go  assets.h  assets.txt  client.c  client.h  localization.go  settings.c  settings.go  settings.h  uistate.go  uistate.h
server/: server.c  server.h
shared/: entity.go  entity.h  faction.go  faction.h  game.c  game.go  game.h  player.go  player.h  tile.go  tile.h  unit.h
utils/: file.c  file.h
